--- a/BeatBox/app/src/main/res/layout/list_item_sound.xml
+++ b/BeatBox/app/src/main/res/layout/list_item_sound.xml
@@ -4,20 +4,30 @@
     在布局文件中声明数据对象
     -->
     <data>
+
         <variable
             name="viewModel"
-            type="android.me.lj.beatbox.SoundViewModel"/>
+            type="android.me.lj.beatbox.SoundViewModel" />
     </data>
-    <!--
-    添加数据绑定lambda表达式，让按钮对象和onButtonClicked()方法关联起来
 
-    使用绑定操作符@{}就可以在布局文件中直接使用这些数据对象的值
-    viewModel.title实际就是viewModel.getTitle()的简写形式。
-    -->
-    <Button
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:onClick="@{() -> viewModel.onButtonClicked()}"
-        android:text="@{viewModel.title}"
-        tools:text="Sound name"/>
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp">
+
+        <!--
+        添加数据绑定lambda表达式，让按钮对象和onButtonClicked()方法关联起来
+
+        使用绑定操作符@{}就可以在布局文件中直接使用这些数据对象的值
+        viewModel.title实际就是viewModel.getTitle()的简写形式。
+        -->
+        <Button
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:onClick="@{() -> viewModel.onButtonClicked()}"
+            android:text="@{viewModel.title}"
+            tools:text="Sound name" />
+    </FrameLayout>
+
 </layout>
