--- a/BeatBox/app/src/main/res/values/styles.xml
+++ b/BeatBox/app/src/main/res/values/styles.xml
@@ -15,7 +15,7 @@
     </style>
 
     <style name="BeatBoxButton" parent="Widget.AppCompat.Button">
-        <item name="android:background">@color/dark_blue</item>
+        <item name="android:background">@drawable/button_beat_box</item>
     </style>
 
     <!--
@@ -24,6 +24,8 @@
     <style name="StrongBeatBoxButton" parent="@style/BeatBoxButton">
         <item name="android:textStyle">bold</item>
     </style>
+    注意：要以主题名的形式指定父主题，有继承关系的两个主题都应处于同一个包中。
+    如果是继承自己内部的主题，使用主题名指定父主题即可；如果是继承Android操作系统中的样式或主题，记得使用parent属性。
     -->
     <style name="BeatBoxButton.Strong">
         <item name="android:textStyle">bold</item>
